--- a/functions/package.json
+++ b/functions/package.json
@@ -3,11 +3,15 @@
   "description": "FFMPEG Convert Audio Firebase Functions sample",
   "dependencies": {
     "@google-cloud/storage": "^4.5.0",
+    "camelcase": "^5.3.1",
+    "child-process-promise": "^2.2.1",
     "ffmpeg-static": "^4.0.1",
     "ffprobe-static": "^3.0.0",
     "firebase-admin": "^8.9.2",
     "firebase-functions": "^3.3.0",
+    "flatten": "^1.0.3",
     "fluent-ffmpeg": "^2.1.2",
+    "glob": "^7.1.6",
     "video-thumbnail-generator": "^1.1.3"
   },
   "devDependencies": {
