--- a/functions/package.json
+++ b/functions/package.json
@@ -2,6 +2,7 @@
   "name": "ffmpeg-convert-audio",
   "description": "FFMPEG Convert Audio Firebase Functions sample",
   "dependencies": {
+    "@elastic/elasticsearch": "^7.6.1",
     "@google-cloud/storage": "^4.5.0",
     "camelcase": "^5.3.1",
     "child-process-promise": "^2.2.1",
@@ -13,6 +14,9 @@
     "fluent-ffmpeg": "^2.1.2",
     "glob": "^7.1.6",
     "gm": "^1.23.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5",
+    "uuid": "^7.0.3",
     "video-thumbnail-generator": "^1.1.3"
   },
   "devDependencies": {
