--- a/functions/package.json
+++ b/functions/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "^7.6.1",
     "@google-cloud/storage": "^4.5.0",
+    "axios": "^0.19.2",
     "camelcase": "^5.3.1",
     "child-process-promise": "^2.2.1",
     "ffmpeg-static": "^4.0.1",
@@ -33,6 +34,6 @@
   },
   "private": true,
   "engines": {
-    "node": "8"
+    "node": "10"
   }
 }
