--- a/functions/package.json
+++ b/functions/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "ffmpeg-convert-audio",
-  "description": "FFMPEG Convert Audio Firebase Functions sample",
+  "name": "amvhub_functions",
+  "description": "AMVHUB Cloud Functions",
   "dependencies": {
-    "@elastic/elasticsearch": "^7.6.1",
-    "@google-cloud/storage": "^4.5.0",
+    "@elastic/elasticsearch": "^7.16.0",
+    "@google-cloud/storage": "^4.7.2",
     "axios": "^0.19.2",
     "camelcase": "^5.3.1",
     "child-process-promise": "^2.2.1",
-    "ffmpeg-static": "^4.0.1",
+    "ffmpeg-static": "^4.4.0",
     "ffprobe-static": "^3.0.0",
-    "firebase-admin": "^8.9.2",
-    "firebase-functions": "^3.3.0",
+    "firebase-admin": "^10.0.0",
+    "firebase-functions": "^3.16.0",
     "flatten": "^1.0.3",
     "fluent-ffmpeg": "^2.1.2",
-    "glob": "^7.1.6",
+    "glob": "^7.2.0",
     "gm": "^1.23.1",
     "request": "^2.88.2",
-    "request-promise": "^4.2.5",
+    "request-promise": "^4.2.6",
     "uuid": "^7.0.3",
     "video-thumbnail-generator": "^1.1.3"
   },
